# drug-discovery-active-learning

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
configs/: targets.yaml
notebooks/: lab_notebook.txt
scripts/: build_bindingdb_descriptors.py  build_bindingdb_features.py  inspect_bindingdb.py  inspect_target_affinity.py  plot_bindingdb_campaign_comparison.py  plot_bindingdb_chemical_space.py  plot_bindingdb_classification_panel.py  plot_bindingdb_projection_panel.py  plot_campaigns.py  plot_initialization_comparison.py  plot_qbc_diagnostics.py  plot_toy_results.py  run_toy_repeated_simulation.py
scripts/classification/: plot_target_comparison_panel.py  run_repeated_simulation.py
scripts/diagnostics/: analyze_campaign_convergence.py  test_calibration_diagnostics.py  test_campaign_convergence.py  test_convergence_diagnostics.py
scripts/preprocessing/: clean_bindingdb_all.py  prepare_target.py
scripts/regression/: benchmark_surrogates.py  check_simulation_engine_equivalence.py  learning_curve_benchmark.py  plot_regression_report.py  plot_target_comparison_panel.py  run_baseline_regression.py  run_repeated_simulation.py  run_ucb_sweep.py  summarize_ucb_sweep.py  supervised_benchmark.py  test_extra_trees_surrogate.py  test_modular_acquisition_equivalence.py  test_regression_surrogate_equivalence.py  test_regression_surrogate_interface.py
scripts/utilities/: inspect_bindingdb_columns.py
src/: descriptors.py  diversity.py  fingerprints.py  molecular_data.py  selection.py  toy_data.py
src/active_learning/: acquisition.py  criteria.py  (+4 more)
(+29 files in other folders)
